--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "dependencies": {
         "core-js": "^3.6.5",
         "element-ui": "^2.15.9",
-        "github-markdown-css": "^4.0.0",
+        "github-markdown-css": "^5.1.0",
+        "highlight.js": "^11.6.0",
         "hyperdown": "^2.4.5",
         "marked": "^1.2.2",
         "prismjs": "^1.22.0",
+        "text-loader": "0.0.1",
         "vue": "^2.6.11",
+        "vue-markdown": "^2.2.4",
         "vue-router": "^3.2.0"
     },
     "devDependencies": {
@@ -31,8 +34,7 @@
         "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^6.2.2",
         "sass": "^1.26.5",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.11"
+        "sass-loader": "^8.0.2"
     },
     "eslintConfig": {
         "root": true,
