--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "ui",
-    "version": "0.1.0",
-    "private": true,
+    "name": "dd-ui-library",
+    "version": "1.0.0",
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
