--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "echarts": "^5.3.3",
         "element-ui": "^2.15.9",
+        "resize-observer-polyfill": "^1.5.1",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
         "vxe-table": "^3.6.6",
