--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "core-js": "^3.6.5",
         "echarts": "^5.3.3",
         "element-ui": "^2.15.9",
+        "lodash": "^4.17.21",
         "resize-observer-polyfill": "^1.5.1",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
